<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo_loginpage" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/email_text"
        android:ems="10"
        android:fontFamily="@font/abhaya_libre_medium"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/passf"
        android:ems="10"
        android:fontFamily="@font/abhaya_libre_medium"
        android:hint="@string/pass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="25sp"  />

    <TextView
        android:id="@+id/frgtpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/abhaya_libre_medium"
        android:text="@string/frgtstr"
        android:textAlignment="textEnd"
        android:textColor="#E1E1E1"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/lgn_bttn"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/gotosignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/abhaya_libre_medium"
        android:text="@string/signstr"
        android:textAlignment="textEnd"
        android:textColor="#E1E1E1"
        android:textSize="20sp" />

    <!--<com.google.android.gms.common.SignInButton
        android:id="@+id/gsignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />-->



</LinearLayout>